# engine

./: .gitmodules  CMakeLists.txt  main.cpp
dependencies/: CMakeLists.txt
scripts/: test.lua
shaders/: default.frag  default.vert
src/: Engine.cpp  Engine.h  Shader.cpp  Shader.h
src/Camera/: Camera.h
src/Utils/: ColorUtils.h  GLMUtils.h  TextureUtils.h
